fix for SRXD 1.0 save file format

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,41 @@
 cache/
 static/
 savedata.*
+package-lock.json
+package.json
+node_modules/.package-lock.json
+node_modules/.bin/prettier
+node_modules/prettier/bin-prettier.js
+node_modules/prettier/cli.js
+node_modules/prettier/doc.js
+node_modules/prettier/index.js
+node_modules/prettier/LICENSE
+node_modules/prettier/package.json
+node_modules/prettier/parser-angular.js
+node_modules/prettier/parser-babel.js
+node_modules/prettier/parser-espree.js
+node_modules/prettier/parser-flow.js
+node_modules/prettier/parser-glimmer.js
+node_modules/prettier/parser-graphql.js
+node_modules/prettier/parser-html.js
+node_modules/prettier/parser-markdown.js
+node_modules/prettier/parser-meriyah.js
+node_modules/prettier/parser-postcss.js
+node_modules/prettier/parser-typescript.js
+node_modules/prettier/parser-yaml.js
+node_modules/prettier/README.md
+node_modules/prettier/standalone.js
+node_modules/prettier/third-party.js
+node_modules/prettier/esm/parser-angular.mjs
+node_modules/prettier/esm/parser-babel.mjs
+node_modules/prettier/esm/parser-espree.mjs
+node_modules/prettier/esm/parser-flow.mjs
+node_modules/prettier/esm/parser-glimmer.mjs
+node_modules/prettier/esm/parser-graphql.mjs
+node_modules/prettier/esm/parser-html.mjs
+node_modules/prettier/esm/parser-markdown.mjs
+node_modules/prettier/esm/parser-meriyah.mjs
+node_modules/prettier/esm/parser-postcss.mjs
+node_modules/prettier/esm/parser-typescript.mjs
+node_modules/prettier/esm/parser-yaml.mjs
+node_modules/prettier/esm/standalone.mjs
